# GrandPrix-Watcher

./: .crawler_state.json  .gitignore  LICENSE  README.md  config.example.toml  config.toml  crawler.py  justfile  mkdocs.yml  pyproject.toml  tests.py
.github/workflows/: ci.yml  publish.yml
docs/: api.md  configuration.md  development.md  index.md  publishing.md  usage.md
src/f1_race_monitor/: __init__.py  __main__.py  core.py
src/grandprix_watcher/: __init__.py  __main__.py  core.py
tests/: __init__.py  conftest.py  test_config_and_notify.py  test_crawler.py  test_matching.py
