[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "f1-race-monitor"
version = "0.1.0"
description = "Monitor Formula 1 replay listing pages and notify when matching videos appear."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Fourat" },
]
keywords = ["f1", "formula-1", "crawler", "monitor", "notifications"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "coverage[toml]>=7.6",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.26",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.8",
  "twine>=5.1",
]

[project.scripts]
f1-monitor = "f1_race_monitor.core:main"

[project.urls]
Homepage = "https://github.com/fourat/f1-race-monitor"
Repository = "https://github.com/fourat/f1-race-monitor"
Issues = "https://github.com/fourat/f1-race-monitor/issues"

[tool.uv]
package = true
required-version = ">=0.9.0"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/README.md",
  "/LICENSE",
  "/config.example.toml",
  "/justfile",
]

[tool.hatch.build.targets.wheel]
packages = ["src/f1_race_monitor"]

[tool.pytest.ini_options]
addopts = "--cov=f1_race_monitor --cov-report=term-missing --cov-report=xml --cov-fail-under=90"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["f1_race_monitor"]
omit = ["src/f1_race_monitor/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
  "if __name__ == .__main__.:",
  "raise SystemExit\\(main\\(\\)\\)",
]

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
files = ["src/f1_race_monitor"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
